@@ -3,9 +3,13 @@ gcc-9 (9.2.1-18) UNRELEASED; urgency=medium
   * Update to SVN 20191107 (r277922) from the gcc-9-branch.
     - Fix PR target/91289 (PPC), PR fortran/92208, PR fortran/92277,
       PR fortran/92208, PR fortran/92284.
+
+  [ Matthias Klose ]
   * Update gm2 from the gcc_9_2_0_gm2 branch 20191107, more parallel
     build issues and cross build fixes.
   * Bump standards version.
+  * ada-libgnatvsn.diff:
+    - Regenerate with upstream automake 1.15.1 and autoconf 2.69.
 
   [ Nicolas Boulenguez ]
   * Copy ada-lib-info-file-prefix-map.diff from gcc-8.
